# OLD_typeql-utils

./: pyproject.toml
tests/: fixtures.py  pytest.ini  test_autocomplete.py  test_syntax.py  test_tidy.py
typeql_utils/: __init__.py  _imports_.py  autocomplete.py  semantic.py  syntax.py  tidy.py
